--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 <div class="col" id="photo"></div>
                 <div class="col" id="photo"></div>
             </section>
+            <section class="row-flex">
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+            </section>
         </main> 
         <footer>
             <div class="footnavbar container">
