STRUTTURA SEMI-COMPLETA

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
     <body>
         <header>
-            <div class="navbar container">
-                <div class="ul-li-head">
-                </div>
-                <div>
-                </div>
-                <div>
-                </div>
+            <div class="ul-li-head">
+                <ul>
+                    <li><i class="fa-solid fa-maximize"></i></li>
+                    <li><i class="fa-solid fa-maximize"></i></li>
+                </ul>  
             </div>
         </header>
         <main class="container">
@@ -27,8 +25,39 @@
                 <div class="col" id="photo"></div>
                 <div class="col" id="photo"></div>
                 <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
             </section>
             <section class="row-flex">
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+            </section>
+            <section class="row-flex">
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+            </section>
+            <section class="row-flex">
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
+            </section>
+            <section class="row-flex">
+                <div class="col" id="photo"></div>
+                <div class="col" id="photo"></div>
                 <div class="col" id="photo"></div>
                 <div class="col" id="photo"></div>
                 <div class="col" id="photo"></div>
@@ -57,7 +86,7 @@
                     </ul>                    
                 </div>
                 <div class="esci">
-                    <div>Esci dalla stanza</div>
+                    <div>End meeting</div>
                 </div>
             </div>
         </footer>
