STRUTTURA FINALE QUASI COMPLETA

--- a/index.html
+++ b/index.html
@@ -20,49 +20,119 @@
         </header>
         <main class="container">
             <section class="row-flex">
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
             </section>
             <section class="row-flex">
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
             </section>
             <section class="row-flex">
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
             </section>
             <section class="row-flex">
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
             </section>
             <section class="row-flex">
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
-                <div class="col" id="photo"></div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
+                <div class="col" id="photo">
+                    <div class="label1"><i class="fa-solid fa-microphone-slash"></i>&nbsp; Pinco Pallo</div>
+                </div>
             </section>
         </main> 
         <footer>
