--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <body>
         <header>
             <div class="ul-li-head">
-                <ul>
-                    <li><i class="fa-solid fa-maximize"></i></li>
-                    <li><i class="fa-solid fa-maximize"></i></li>
-                </ul>  
+                <div class="entra">
+                    <div><i class="fa-solid fa-maximize"></i>&nbsp; Speaker view</div>
+                </div>
+                <div class="entra1">
+                    <div><i class="fa-solid fa-info"></i></div>
+                </div>>  
             </div>
         </header>
         <main class="container">
@@ -139,20 +141,45 @@
             <div class="footnavbar container">
                 <div>
                     <ul class="microandvideo">                        
-                        <li><i class="fa-solid fa-microphone"></i></li>
-                        <li><i class="fa-solid fa-video"></i></li>
+                        <li><i class="fa-solid fa-microphone"></i>
+                            <p>Mute</p>
+                        </li>
+                        <li><i class="fa-solid fa-chevron-up"></i></li>
+                        <li><i class="fa-solid fa-video"></i>
+                            <p>Stop Video</p>
+                        </li>
+                        <li><i class="fa-solid fa-chevron-up"></i></li>
                     </ul>
                 </div>
                 <div>
                     <ul class="utility">
-                        <li><i class="fa-solid fa-user-plus"></i></li>
-                        <li><i class="fa-solid fa-users"></i></li>
-                        <li><i class="fa-solid fa-chart-column"></i></i></li>
-                        <li><i class="fa-solid fa-share-from-square"></i></li>
-                        <li><i class="fa-solid fa-comment"></i></li>
-                        <li><i class="fa-solid fa-record-vinyl"></i></i></li>
-                        <li><i class="fa-brands fa-microsoft"></i></li>
-                        <li><i class="fa-solid fa-ellipsis"></i></li>
+                        <li><i class="fa-solid fa-user-plus"></i>
+                            <p>Invite</p>
+                        </li>
+                        <li><i class="fa-solid fa-users"></i>
+                            <p>Manage</p>
+                        </li>
+                        <li><i class="fa-solid fa-chart-column"></i>
+                            <p>Polling</p>
+                        </li>
+                        <li><i class="fa-solid fa-share-from-square"></i>
+                            <p>Share</p>
+                        </li>
+                        <li><i class="fa-solid fa-chevron-up"></i>
+                        
+                        </li>
+                        <li><i class="fa-solid fa-comment"></i>
+                            <p>Chat</p>
+                        </li>
+                        <li><i class="fa-solid fa-record-vinyl"></i>
+                            <p>Record</p>
+                        </li>
+                        <li><i class="fa-brands fa-microsoft"></i>
+                            <p>Breakout</p>
+                        </li>
+                        <li><i class="fa-solid fa-ellipsis"></i>
+                            <p>More</p>
+                        </li>
                     </ul>                    
                 </div>
                 <div class="esci">
